// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TI should POST mesure and send email 1`] = `
Object {
  "success": true,
}
`;

exports[`TI should POST mesure and send email 2`] = `
Array [
  Object {
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "Madame, Monsieur,
<br><br>
  Pour information, le ti paris cabinet 6D, a décidé de vous confier une nouvelle mesure :
  <br>
  - \\"type de mesure\\": preposes
  <br>
  - \\"genre\\": madame
  <br>
  - \\"année de naissance\\": 2010-10-05.
<br><br>
    Quand cette dernière vous sera officiellement notifiée, nous vous invitons à mettre à jour vos mesures en cours.
<br><br>
  Pour rappel, à ce jour, vous avez déclaré \\"1\\" mesures pour une capacité souhaitée de \\"5\\" mesures.
<br><br>
  À bientôt
<br><br>
L’équipe e-mjpm.",
    "subject": "e-MJPM : une nouvelle mesure vous a été attribuée",
    "text": "Madame, Monsieur,

  Pour information, le ti paris cabinet 6D, a décidé de vous confier une nouvelle mesure :
  - \\"type de mesure\\": preposes
  - \\"genre\\": madame
  - \\"année de naissance\\": 2010-10-05.

  Quand cette dernière vous sera officiellement notifiée, nous vous invitons à mettre à jour vos mesures en cours.

  Pour rappel, à ce jour, vous avez déclaré \\"1\\" mesures pour une capacité souhaitée de \\"5\\" mesures .

  À bientôt

  L’équipe e-mjpm.",
    "to": "ud@ud.com",
  },
]
`;

exports[`TI should POST mesure-reservation 1`] = `
Array [
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "madame",
    "code_postal": "28000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": null,
    "etablissement": "peu pas",
    "etablissement_id": null,
    "extinction": null,
    "id": 6,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": 1,
    "type": "preposes",
    "ville": "Chartres",
  },
]
`;

exports[`mandataire should NOT POST mesure for another one [REST url abuse] 1`] = `
Array [
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "H",
    "code_postal": "93000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 94,
    "etablissement": "CAROUF",
    "etablissement_id": null,
    "extinction": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": null,
    "type": "Sauvegarde de justice",
    "ville": "St Denis",
  },
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "madame",
    "code_postal": "28000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 27,
    "etablissement": "peu pas",
    "etablissement_id": null,
    "extinction": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": null,
    "type": "preposes",
    "ville": "Chartres",
  },
]
`;

exports[`mandataire should NOT POST mesure for another one [body forge] 1`] = `
Array [
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "H",
    "code_postal": "93000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 94,
    "etablissement": "CAROUF",
    "etablissement_id": null,
    "extinction": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": null,
    "type": "Sauvegarde de justice",
    "ville": "St Denis",
  },
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "madame",
    "code_postal": "28000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 27,
    "etablissement": "peu pas",
    "etablissement_id": null,
    "extinction": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": null,
    "type": "preposes",
    "ville": "Chartres",
  },
]
`;

exports[`mandataire should POST mesure 1`] = `
Array [
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "H",
    "code_postal": "93000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 94,
    "etablissement": "CAROUF",
    "etablissement_id": null,
    "extinction": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": null,
    "type": "Sauvegarde de justice",
    "ville": "St Denis",
  },
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "madame",
    "code_postal": "28000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 27,
    "etablissement": "peu pas",
    "etablissement_id": null,
    "extinction": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": null,
    "type": "preposes",
    "ville": "Chartres",
  },
]
`;
